--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,16 +28,22 @@
     </div>
 
     <!-- CHAT -->
-    <div class="row justify-content-center bg-color-home-inverted mt-2 mx-auto rounded" id="chat-container">
+    <div class="justify-content-center bg-color-home-inverted mt-2 mx-auto rounded" id="chat-container">
 
         <div class="row justify-content-center">
             <div class="col text-color text-center">
-                <h5>Insinia chat</h5>
+                <h4>Insinia chat</h4>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <hr class="line">
             </div>
         </div>
 
         <!-- FIRST MESSAGE -->
-        <div class="row justify-content-end mt-5">
+        <div class="row justify-content-end mt-2">
             <div class="col-xl-4">
                 <div class="card bg-color border-0 shadow-sm card-hover-primary">
                     <div class="card-body border-bottom border-color text-color pb-4">
@@ -45,7 +51,7 @@
                             <h5 class="text-color fw-bolder">Bienvenido</h5>
                             <span class="fs-sm text-muted"><i class="bi bi-bell-fill"></i></span>
                         </div>
-                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-headset me-2"></i>Bienvenido a Insinia, proporcionamos herramientas para facilitar el desarrollo de las cosas.</p>
+                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-headset me-2"></i>Bienvenido a Insinia, la herramienta ideada para rankings tanto para uso personal y en grupo.</p>
                     </div>
                     <div class="card-footer bg-light d-flex align-items-center py-3 text-muted border-top-0 gap-1">
                         <button class="btn btn-sm btn-color text-light shadow"><i class="bi bi-moon-stars-fill"></i></button>
@@ -95,14 +101,21 @@
             <div class="col-2"></div>
         </div>
 
-        <div class="row justify-content-center pb-3 mt-5">
-            <div class="col-8">
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <hr class="line border-light">
+            </div>
+        </div>
+
+        <div class="row justify-content-center pb-3 mt-2">
+            <div class="col-10">
                 <div class="d-flex gap-1 text-color">
-                    <input class="form-control text-color rounded" placeholder="Escribe para enviar un mensaje">
-                    <button class="btn btn btn-outline-color border-0 bg-light"><i class="bi bi-send"></i></button>
+                    <input class="form-control text-color rounded" placeholder="Escribe para enviar un mensaje" disabled>
+                    <button class="btn btn btn-outline-color border-0 bg-light" disabled><i class="bi bi-send"></i></button>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
