register validator (mail - pass)

--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -76,7 +76,7 @@ input::-webkit-input-placeholder {
 .messageOne {
   text-align: center;
   background-size: cover;
-  color: aliceblue;
+  color: #44df07;
   font-size: xx-large;
   font-weight: 900 !important;
   font-size: 3rem;
